<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/middle_title_default"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="60sp"
        android:layout_gravity="center"
        android:textAlignment="gravity" />
    <TextView
        android:text="@string/middle_tip_default_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
    <TextView
        android:text="@string/middle_tip_default_bottom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
</LinearLayout>