<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/top_btn_linear"
        android:layout_weight="1"
        android:id="@+id/btn_linear"
        android:singleLine="true"
        android:textSize="12sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/top_btn_relative"
        android:layout_weight="1"
        android:id="@+id/btn_relative"
        android:singleLine="true"
        android:textSize="12sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/top_btn_table"
        android:layout_weight="1"
        android:id="@+id/btn_table"
        android:singleLine="true"
        android:textSize="12sp" />
</LinearLayout>