<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_tip_table_left"
            android:layout_weight="1"
            android:singleLine="false"
            android:layout_gravity="center">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_tip_table_center"
            android:layout_weight="1"
            android:singleLine="false"
            android:layout_gravity="center">
        </TextView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_tip_table_right"
            android:layout_weight="1"
            android:singleLine="false"
            android:layout_gravity="center">
        </TextView>
    </TableRow>

</TableLayout>